Small fixs targeted on tablet devices.

--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/frontpage.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/frontpage.less
@@ -365,6 +365,7 @@
             margin:0 0 1.5em 0;
             line-height: 1.25em;
             color:#7a7a20;
+            text-align: left;
         }
     }
 
