--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/progress.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/progress.less
@@ -227,6 +227,9 @@
       width: @stepLabelWidth;
       margin-left: -@stepLabelWidth / 2;
       text-align: center;
+      @media @big-mobile {
+        width: 7.75em;;
+      }
       @media @small-mobile {
         display: none;
       }
